--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,47 @@
 section h1 {
   font-size: 24px;
   color: #032f3e; }
+
+.lead-banner {
+  color: white;
+  position: relative;
+  width: 100%;
+  text-align: right; }
+  .lead-banner .banner-content {
+    position: absolute;
+    top: 50px;
+    width: 100%; }
+  .lead-banner img {
+    width: 100%; }
+  .lead-banner span {
+    font-size: 46px;
+    font-weight: bold;
+    display: block;
+    text-transform: uppercase; }
+  .lead-banner span.title {
+    font-weight: normal;
+    margin-bottom: 30px; }
+
+.lessons-banner {
+  color: white;
+  position: relative;
+  width: 100%; }
+  .lessons-banner .banner-content {
+    position: absolute;
+    top: 50px;
+    width: 100%; }
+  .lessons-banner img {
+    width: 100%; }
+  .lessons-banner span {
+    font-size: 46px;
+    font-weight: bold;
+    display: block;
+    text-transform: uppercase; }
+  .lessons-banner span.title {
+    font-weight: normal;
+    margin-bottom: 30px; }
+  .lessons-banner li {
+    font-size: 20px;
+    max-width: 500px;
+    margin: 60px 0;
+    text-transform: uppercase; }
