--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,36 +1,6 @@
-// Variables
-
-$deepBlue: #032f3e;
-$sectionHeading: 24px;
-$offWhite: #f8f9fb;
-$banner-heading: 46px;
-
-//mixins
-
-@mixin banner {
-    color: white;
-    position: relative;
-    width: 100%;
-    .banner-content{
-        position: absolute;
-        top: 50px;
-        width:100%;
-    }
-    img{
-        width: 100%;
-    }
-    span{
-        font-size: $banner-heading;
-        font-weight: bold;
-        display: block;
-        text-transform: uppercase;
-
-    }
-    span.title{
-        font-weight: normal;
-        margin-bottom: 30px;
-    }
-}
+@import "reset";
+@import "variables";
+@import "mixins";
 
 #main-nav{
     background-color: $deepBlue;
