--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,12 +6,11 @@
     background-color: $deepBlue;
     ul{
         width: 100%;
+        @include clearFix;
     }
     li{
         float: left;
-        width: 14%;
-        display: block;
-        padding: 16px;
+        width: (100% / 6);
     }
     a{
         color: $offWhite;
@@ -19,18 +18,41 @@
         padding: 16px;
         text-decoration: none;
         text-align: center;
+        &:hover{
+            background-color: lighten($deepBlue, 6);
+        }
+    }
+}
+#services{
+    margin-bottom: 60px;
+    li{
+        box-sizing: border-box;
+        float: left;
+        text-align: center;
+        width: (100% / 3);
+    }
+    img{
+        width: 60%;
+        margin: 60px 20%;
+    }
+    a{
+        color: $deepBlue;
+        font-weight: bold;
+        text-decoration: none;
+        &:hover{
+            color: complement($deepBlue);
+        }
+    }
+
+    ul{
+        @include clearFix;
     }
 }
 
-#main-nav ul:after{
-    content: "";
-    display: block;
-    clear: both;
-}
-
 section h1{
-    font-size: $sectionHeading;
     color: $deepBlue;
+    font-size: $sectionHeading;
+    
 }
 
 .lead-banner{
@@ -44,5 +66,12 @@ section h1{
         max-width:500px;
         margin: 60px 0;
         text-transform: uppercase;
+    }
+}
+#projects li{
+    @include grid(4, 2%);
+
+    img{
+        width: 100%;
     }
 }
