--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -24,7 +24,7 @@ body {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    //padding: 0 20px;
     box-sizing: border-box;
   }
   
